--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,3 +5,8 @@ RUN apt -yqq install --no-install-recommends curl ca-certificates libunwind-dev 
 
 # Install dfx
 RUN sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
+
+# Install PocketIC
+RUN curl -sLO https://download.dfinity.systems/ic/69e1408347723dbaa7a6cd2faa9b65c42abbe861/openssl-static-binaries/x86_64-linux/pocket-ic.gz
+RUN gzip -d pocket-ic.gz
+RUN chmod +x pocket-ic
