--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-members = [
-    "src/icp_hello_world_rust_backend",
-]
+members = ["src/icp_hello_world_rust_backend"]
+
+resolver = "2"
