--- a/src/icp_hello_world_rust_backend/Cargo.toml
+++ b/src/icp_hello_world_rust_backend/Cargo.toml
@@ -12,3 +12,6 @@ crate-type = ["cdylib"]
 candid = "0.8"
 ic-cdk = "0.7"
 ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
+
+[dev-dependencies]
+pocket-ic = "2.0.1"
