--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,10 +5,8 @@ tasks:
       npm install &
       export PATH="$HOME/bin:$PATH"
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
-      sudo apt-get install -q -y libunwind-dev
-      sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
       dfx start --background --clean
-      mv /pocket-ic ./src/icp_hello_world_rust_backend
+      cp /pocket-ic ./src/icp_hello_world_rust_backend
 
 vscode:
   extensions:
