--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,10 @@
 tasks:
     - before: |
       npm install &
-      export MO_DEV_HIDE_URLS=1 # hide Candid UI links
       export PATH="$HOME/bin:$PATH"
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
       sudo apt-get install -q -y libunwind-dev
+      cp /pocket-ic ./src/icp_hello_world_rust_backend
       sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
       dfx start --background --clean
     command: |
