--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,8 @@
 tasks:
     - before: |
-        npm install &
         export PATH="$HOME/bin:$PATH"
         echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
+        rustup target add wasm32-unknown-unknown
         sudo apt-get install -q -y libunwind-dev
         curl -sLO https://download.dfinity.systems/ic/69e1408347723dbaa7a6cd2faa9b65c42abbe861/openssl-static-binaries/x86_64-linux/pocket-ic.gz
         gzip -d pocket-ic.gz
@@ -10,8 +10,7 @@ tasks:
         mv pocket-ic ./src/icp_hello_world_rust_backend
         sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
         dfx start --background --clean
-      command: |
-        npm start
+        npm install &
 
 vscode:
   extensions:
