--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name": "ICP Hello World Rust",
     "image": "ghcr.io/fxgst/icp-dev-env:release",
+    "forwardPorts": [4943, 8080],
     "portsAttributes": {
         "4943": {
             "label": "dfx",
