--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,6 +11,7 @@ tasks:
         sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
         npm install &
         dfx start --background --clean
+        open README.md
 
 vscode:
   extensions:
