--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,9 +12,10 @@
             "onAutoForward": "openBrowser"
         }
     },
-    "onCreateCommand": "nohup bash -c 'dfx start &' && cat nohup.out && rm nohup.out",
+    "onCreateCommand": "nohup bash -c 'dfx start &'",
     "postCreateCommand": "mv /pocket-ic ./src/icp_hello_world_rust_backend",
     "postStartCommand": "npm install",
+    "postAttachCommand": "cat nohup.out && rm nohup.out",
     "customizations": {
         "vscode": {
             "extensions": [
