--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,17 +1,18 @@
 tasks:
-    - before: |
-        export PATH="$HOME/bin:$PATH"
-        echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
-        rustup target add wasm32-unknown-unknown
-        sudo apt-get install -q -y libunwind-dev
-        curl -sLO https://download.dfinity.systems/ic/69e1408347723dbaa7a6cd2faa9b65c42abbe861/openssl-static-binaries/x86_64-linux/pocket-ic.gz
-        gzip -d pocket-ic.gz
-        chmod +x pocket-ic
-        mv pocket-ic ./src/icp_hello_world_rust_backend
-        sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
-        npm install &
-        dfx start --background --clean
-        open README.md
+  - before: |
+      export PATH="$HOME/bin:$PATH"
+      export DFX_VERSION=0.16.0
+      echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
+      rustup target add wasm32-unknown-unknown
+      sudo apt-get install -q -y libunwind-dev
+      curl -sLO https://download.dfinity.systems/ic/69e1408347723dbaa7a6cd2faa9b65c42abbe861/openssl-static-binaries/x86_64-linux/pocket-ic.gz
+      gzip -d pocket-ic.gz
+      chmod +x pocket-ic
+      mv pocket-ic ./src/icp_hello_world_rust_backend
+      sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
+      npm install &
+      dfx start --background --clean
+      open README.md
 
 vscode:
   extensions:
