--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,9 @@
 tasks:
   - before: |
-      export PATH="$HOME/bin:$PATH"
       export DFX_VERSION=0.17.0
       export POCKET_IC_SERVER_VERSION=3.0.1
+      export DFXVM_INIT_YES=true
+      export PATH="$HOME/bin:$PATH"
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
       rustup target add wasm32-unknown-unknown
       sudo apt-get install -q -y libunwind-dev
