--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,9 @@
 tasks:
   - before: |
-      export PATH="$HOME/bin:$PATH"
       export DFX_VERSION=0.17.0
       export POCKET_IC_SERVER_VERSION=3.0.1
+      export DFXVM_INIT_YES=true
+      export PATH="$HOME/bin:$PATH"
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
       rustup target add wasm32-unknown-unknown
       sudo apt-get install -q -y libunwind-dev
@@ -11,6 +12,7 @@ tasks:
       chmod +x pocket-ic
       mv pocket-ic ./src/icp_hello_world_rust_backend
       sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
+      source "$HOME/.local/share/dfx/env"
       npm install &
       dfx start --background --clean
       open README.md
