--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 tasks:
   - before: |
-      export DFX_VERSION=0.17.0
+      export DFX_VERSION=0.18.0
       export POCKET_IC_SERVER_VERSION=3.0.1
       export DFXVM_INIT_YES=true
       export PATH="$HOME/bin:$PATH"
@@ -13,6 +13,7 @@ tasks:
       mv pocket-ic ./src/icp_hello_world_rust_backend
       sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
       source "$HOME/.local/share/dfx/env"
+      export DFX_VERSION=
       npm install &
       dfx start --background --clean
       open README.md
