--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "icp_hello_world_rust_backend"
+name = "backend"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,8 +9,8 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.10.3"
-ic-cdk = "0.12.0"
+candid = "0.10.10"
+ic-cdk = "0.17.0"
 
 [dev-dependencies]
-pocket-ic = "4.0.0"
+pocket-ic = "6.0.0"
