--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -23,7 +23,7 @@ vscode:
     - rust-lang.rust-analyzer
 
 ports:
-  - name: Replica
+  - name: Dfx
     port: 4943
     visibility: public
     onOpen: ignore
