--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,7 +10,7 @@ tasks:
       curl -Ls https://github.com/dfinity/pocketic/releases/download/${POCKET_IC_SERVER_VERSION}/pocket-ic-x86_64-linux.gz -o pocket-ic.gz
       gzip -d pocket-ic.gz
       chmod +x pocket-ic
-      mv pocket-ic /usr/local/bin
+      sudo mv pocket-ic /usr/local/bin
       sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
       source "$HOME/.local/share/dfx/env"
       unset DFX_VERSION
